refactorings and dependency updates